[gd_scene load_steps=2 format=3 uid="uid://b2x7dqcgn3enj"]

[ext_resource type="Script" path="res://source/abstract_type_line.gd" id="1_hbq23"]

[node name="TypeLine" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2.0
offset_bottom = -376.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_hbq23")

[node name="ButtonType" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
toggle_mode = true
text = "TypeLine"

[node name="Amount" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
metadata/_edit_group_ = true

[node name="ReferenceRect" type="ReferenceRect" parent="Amount"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TimeTaken" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
metadata/_edit_group_ = true

[node name="ReferenceRect" type="ReferenceRect" parent="TimeTaken"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MemoryTaken" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.5
tooltip_text = "Memory taken by all allocated objects combined"
editable = false

[node name="MemoryPerObject" type="LineEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Memory taken by a single variable/object"
editable = false
